feat: github connect refactor: jwt hash
